# termlabs

./: .gitignore  CLAUDE.md  TODO.md  eslint.config.js  index.html  latest.json  package-lock.json  package.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-12-termlabs-implementation.md  2026-04-14-terminal-image-support.md
docs/superpowers/specs/: 2026-04-12-termlabs-design.md  2026-04-14-terminal-image-support-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  mod.rs  projects.rs  ssh.rs
src-tauri/src/config/: app.rs  mod.rs  projects.rs
src-tauri/src/pty/: handler.rs  manager.rs
src-tauri/src/ssh/: config.rs  connection.rs  keys.rs  mod.rs
src/components/about/: AboutModal.tsx
src/components/layout/: Sidebar.tsx  TabBar.tsx  TitleBar.tsx
src/components/settings/: SettingsModal.tsx
src/components/sidebar/: KeyManager.tsx  ProjectTree.tsx  SSHForm.tsx  SSHTree.tsx
src/components/terminal/: SplitContainer.tsx  TerminalPane.tsx  TerminalTab.tsx
src/hooks/: useSplitPane.ts  useTerminal.ts  useTheme.ts
src/hooks/__tests__/: useSplitPane.test.ts
src/lib/: ipc.ts
src/stores/: projectStore.ts  settingsStore.ts  sidebarStore.ts  sshStore.ts  tabStore.ts
src/stores/__tests__/: tabStore.test.ts
src/styles/: app.css  fonts.css  terminal.css
