[package]
name = "termlabs"
version = "0.2.0"
description = "A cross-platform terminal emulator"
authors = ["you"]
edition = "2021"

[lib]
name = "termlabs_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
tauri-plugin-dialog = "2.7.0"
ssh2 = "0.9"
dirs = "5"
tauri-plugin-os = "2.3.2"
